@@ -1,20 +1,17 @@
 package org.example.gateway.filter;
 
 import lombok.extern.slf4j.Slf4j;
+import org.example.exception.exceptions.InvalidTokenException;
 import org.example.gateway.config.Carousel;
-import org.example.gateway.filter.RouteValidator;
 import org.example.gateway.utils.JwtUtil;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
-import org.springframework.core.io.buffer.DefaultDataBufferFactory;
 import org.springframework.http.*;
-import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.server.ServerWebExchange;
-import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.sql.Timestamp;
@@ -30,7 +27,7 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
     @Value("${spring.profiles.active}")
     private String activeProfile;
 
-    private Carousel carousel;
+    private final Carousel carousel;
 
     public AuthenticationFilter(JwtUtil jwtUtil, RestTemplate restTemplate, RouteValidator validator, Carousel carousel) {
         super(Config.class);
@@ -39,91 +36,6 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
         this.template = restTemplate;
         this.validator = validator;
     }
-
-//    @Override
-//    public GatewayFilter apply(Config config) {
-//        return ((exchange, chain) -> {
-//            log.info("Processing request for path: {}", exchange.getRequest().getURI());
-//            log.info("--START GatewayFilter");
-//            if (validator.isSecure.test(exchange.getRequest())) {
-//                if (!exchange.getRequest().getCookies().containsKey(HttpHeaders.AUTHORIZATION) && !exchange.getRequest().getCookies().containsKey("refresh")) {
-//                    exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
-//                    exchange.getResponse().getHeaders().setContentType(MediaType.APPLICATION_JSON);
-//                    StringBuilder stringBuilder = new StringBuilder("{\n")
-//                            .append("\"timestamp\": \"")
-//                            .append(new Timestamp(System.currentTimeMillis()))
-//                            .append("\",\n")
-//                            .append("\"message\": \"This token is empty or invalid\",\n")
-//                            .append("\"code\": \"A3\"\n")
-//                            .append("}");
-//
-//                    return exchange.getResponse().writeWith(Mono.just(exchange.getResponse()
-//                            .bufferFactory()
-//                            .wrap((stringBuilder.toString()).getBytes())));
-//                }
-//
-//                HttpCookie authCookie = exchange.getRequest().getCookies().get(HttpHeaders.AUTHORIZATION).get(0);
-//                HttpCookie refreshCookie = exchange.getRequest().getCookies().get("refresh").get(0);
-//                log.info("--START validate Token");
-//                try {
-//                    if (activeProfile.equals("test")) {
-//                        log.debug("Init self auth methods (only for tests)");
-//                        jwtUtil.validateToken(authCookie.getValue());
-//                    } else {
-//                        String cookies = new StringBuilder()
-//                                .append(authCookie.getName())
-//                                .append("=")
-//                                .append(authCookie.getValue())
-//                                .append(";")
-//                                .append(refreshCookie.getName())
-//                                .append("=")
-//                                .append(refreshCookie.getValue()).toString();
-//                        HttpHeaders httpHeaders = new HttpHeaders();
-//                        httpHeaders.add("Cookie", cookies);
-//                        HttpEntity<Object> entity = new HttpEntity<>(httpHeaders);
-//                        ResponseEntity<String> response;
-//                        if (validator.isAdmin.test(exchange.getRequest())) {
-//                            response = template.exchange("http://" + carousel.getUriAuth() + "/api/v1/auth/authorize", HttpMethod.GET, entity, String.class);
-//                        } else {
-//                            response = template.exchange("http://" + carousel.getUriAuth() + "/api/v1/auth/validate", HttpMethod.GET, entity, String.class);
-//                        }
-//                        if (response.getStatusCode() == HttpStatus.OK) {
-//                            List<String> cookiesList = response.getHeaders().get(HttpHeaders.SET_COOKIE);
-//                            if (cookiesList != null) {
-//                                List<java.net.HttpCookie> httpCookie = java.net.HttpCookie.parse(cookiesList.get(0));
-//                                for (java.net.HttpCookie cookie : httpCookie) {
-//                                    exchange.getResponse().getCookies().add(cookie.getName(),
-//                                            ResponseCookie.from(cookie.getName(), cookie.getValue())
-//                                                    .domain(cookie.getDomain())
-//                                                    .path(cookie.getPath())
-//                                                    .maxAge(cookie.getMaxAge())
-//                                                    .secure(cookie.getSecure())
-//                                                    .httpOnly(cookie.isHttpOnly())
-//                                                    .build());
-//                                }
-//                            }
-//                            log.info("Successful login");
-//                        }
-//                    }
-//                } catch (HttpClientErrorException e) {
-//                    log.warn("Can't login bad token");
-//                    String message = e.getMessage().substring(7);
-//                    message = message.substring(0, message.length() - 1);
-//                    ServerHttpResponse response = exchange.getResponse();
-//                    HttpHeaders headers = response.getHeaders();
-//                    headers.setContentType(MediaType.APPLICATION_JSON);
-//                    response.setStatusCode(HttpStatus.UNAUTHORIZED);
-//                    return exchange.getResponse().writeWith(Flux.just(new DefaultDataBufferFactory().wrap(message.getBytes())));
-//                }
-//            }
-//            log.info("--STOP validate Token");
-//            log.info("--STOP GatewayFilter");
-//            log.info("Forwarding request to downstream service: {}", exchange.getRequest().getURI());
-//            return chain.filter(exchange).doOnSuccess(aVoid -> {
-//                log.info("Przekierowanie zakończone sukcesem");
-//            });
-//        });
-//    }
 
     @Override
     public GatewayFilter apply(Config config) {
@@ -148,7 +60,6 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
                         log.debug("Init self auth methods (only for tests)");
                         jwtUtil.validateToken(accessToken);
                     } else {
-                        // Validate the access token via the auth service
                         HttpHeaders httpHeaders = new HttpHeaders();
                         httpHeaders.add(HttpHeaders.AUTHORIZATION, "Bearer " + accessToken);
                         if (refreshToken != null) {
@@ -158,7 +69,6 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
                         HttpEntity<Object> entity = new HttpEntity<>(httpHeaders);
                         ResponseEntity<String> response;
 
-                        // Call appropriate auth endpoint based on request type (admin or user)
                         String authUrl = validator.isAdmin.test(exchange.getRequest())
                                 ? "http://" + carousel.getUriAuth() + "/api/v1/auth/authorize"
                                 : "http://" + carousel.getUriAuth() + "/api/v1/auth/validate";
@@ -168,15 +78,14 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
                         if (response.getStatusCode() == HttpStatus.OK) {
                             log.info("Successful token validation");
 
-                            // If auth service returns new tokens in headers, forward them
                             List<String> newAccessToken = response.getHeaders().get(HttpHeaders.AUTHORIZATION);
                             List<String> newRefreshToken = response.getHeaders().get("Refresh-Token");
 
                             if (newAccessToken != null && !newAccessToken.isEmpty()) {
-                                exchange.getResponse().getHeaders().set(HttpHeaders.AUTHORIZATION, newAccessToken.get(0));
+                                exchange.getResponse().getHeaders().set(HttpHeaders.AUTHORIZATION, newAccessToken.getFirst());
                             }
                             if (newRefreshToken != null && !newRefreshToken.isEmpty()) {
-                                exchange.getResponse().getHeaders().set("Refresh-Token", newRefreshToken.get(0));
+                                exchange.getResponse().getHeaders().set("Refresh-Token", newRefreshToken.getFirst());
                             }
                         }
                     }
@@ -187,6 +96,20 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
             }
 
             log.info("--STOP validate Token");
+            if (validator.isSecure.test(exchange.getRequest())) {
+                try {
+                    String userId = jwtUtil.getUserFromRequest(exchange.getRequest());
+                    if (userId != null && !userId.isEmpty()) {
+                        exchange = exchange.mutate()
+                                .request(r -> r.headers(headers -> headers.add("userId", userId)))
+                                .build();
+                        log.info("Added userId header to the request: {}", userId);
+                    }
+                } catch (InvalidTokenException e) {
+                    log.warn("Token not found or invalid for secure endpoint: {}", e.getMessage());
+                    return buildErrorResponse(exchange, "Authorization token is missing or invalid", "A3", HttpStatus.UNAUTHORIZED);
+                }
+            }
             log.info("--STOP GatewayFilter");
             log.info("Forwarding request to downstream service: {}", exchange.getRequest().getURI());
             return chain.filter(exchange).doOnSuccess(aVoid -> {
